@@ -106,78 +106,6 @@ void alSourceQueueBuffers( ALuint sid, ALsizei numBuffers, const ALuint *bids ) 
 }
 
 /*
- * alQueuei( ALuint sid, ALenum param, ALint i1 )
- *
- * Obsolete function.  Remove this.
- */
-void alQueuei( ALuint sid, ALenum param, ALint i1 ) {
-	AL_source *src;
-	ALboolean inrange = AL_FALSE;
-
-	SOURCELOCK();
-	src = _alDCGetSource(sid);
-	if(src == NULL) {
-		_alDCSetError(AL_INVALID_NAME);
-		SOURCEUNLOCK();
-
-		return;
-	}
-
-	/*
-	 * all calls to alQueuei specify either ALboolean parameters,
-	 * which means that i1 is either AL_TRUE, AL_FALSE, or
-	 * a buffer id.  So check for validity of i1 first, and
-	 * set error if that's the case.
-	 */
-	switch(param) {
-		case AL_LOOPING:
-		case AL_SOURCE_RELATIVE:
-		  inrange = _alCheckRangeb(i1);
-		  break;
-		case AL_BUFFER:
-		  inrange = alIsBuffer(i1);
-		  break;
-		default:
-		  /* invalid param,  error below. */
-		  break;
-	}
-
-	if(inrange == AL_FALSE) {
-		_alDebug(ALD_SOURCE, __FILE__, __LINE__,
-		      "alQueuei(%d, 0x%x, ...) called with invalid value %d",
-		      sid, param, i1);
-
-		_alDCSetError(AL_INVALID_VALUE);
-
-		SOURCEUNLOCK();
-		return;
-	}
-
-	switch(param) {
-		case AL_LOOPING:
-		  src->islooping.isset=AL_TRUE;
-		  src->islooping.data=i1;
-		  break;
-
-		case AL_BUFFER:
-		  /* Append bid to end */
-		  _alSourceQueueAppend(src, i1);
-		  break;
-		default:
-		  _alDebug(ALD_SOURCE, __FILE__, __LINE__,
-			"alQueuei: invalid or stubbed source param 0x%x",
-			param);
-
-		  _alDCSetError(AL_INVALID_ENUM);
-		  break;
-	}
-
-	SOURCEUNLOCK();
-
-	return;
-}
-
-/*
  * _alSourceQueueGetCurrentState( AL_source *src )
  *
  * Returns the current AL_sourcestate of the current queue entry for AL_source
