@@ -57,11 +57,11 @@ static void init( const char *fname ) {
 	alSourcef(  multis, AL_GAIN_LINEAR_LOKI, 1.0);
 
 
-	alQueuei( multis, AL_BUFFER, boom );
-	alQueuei( multis, AL_BUFFER, boom );
-	alQueuei( multis, AL_BUFFER, boom );
-	alQueuei( multis, AL_BUFFER, boom );
-	alQueuei( multis, AL_BUFFER, boom );
+	alSourceQueueBuffers( multis, 1, &boom );
+	alSourceQueueBuffers( multis, 1, &boom );
+	alSourceQueueBuffers( multis, 1, &boom );
+	alSourceQueueBuffers( multis, 1, &boom );
+	alSourceQueueBuffers( multis, 1, &boom );
 
 	return;
 }
